CustomObjects/objects/invoiceit_s__Payment_Plan__c.object
<CustomObject>
    <description>This object acts as a place holder for defining the Payment Plan and acts as master table for configurations.</description>
    <fields>
        <fullName>invoiceit_s__Down_Payment_Amount__c</fullName>
        <label>Down Payment (Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Down_Payment__c</fullName>
        <label>Down Payment (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Installment_Start_Date__c</fullName>
        <label>Installment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Is_Plan_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>At order level, you can adjust no of installments according to your need when this field is set as true otherwise you need to stick with this plan without any change</description>
        <inlineHelpText>At order level, you can adjust no of installments according to your need when this field is set as true otherwise you need to stick with this plan without any change</inlineHelpText>
        <label>Is Plan Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Maximum_Installments__c</fullName>
        <label>Maximum Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Minimum_Installments__c</fullName>
        <label>Minimum Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__No_of_Installments__c</fullName>
        <label>No of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Type_of_Installments__c</fullName>
        <label>Type of Installments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Check_Maximum_Installments</fullName>
        <active>true</active>
        <errorConditionFormula>IF(invoiceit_s__Maximum_Installments__c  &lt;=  invoiceit_s__No_of_Installments__c  ,true,false )</errorConditionFormula>
        <errorMessage>Maximum Installments should be greater than no of installments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Validate_Down_Payment_Amt_or_percentage</fullName>
        <active>true</active>
        <errorConditionFormula>IF( invoiceit_s__Down_Payment__c &gt;0 &amp;&amp;   invoiceit_s__Down_Payment_Amount__c &gt;0,true ,false )</errorConditionFormula>
        <errorMessage>Enter either amount or percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__check_Minimum_Installments</fullName>
        <active>true</active>
        <errorConditionFormula>IF( invoiceit_s__Minimum_Installments__c &gt;= invoiceit_s__No_of_Installments__c , true, false)</errorConditionFormula>
        <errorMessage>Minimum Installments should be lesser than no of installments.</errorMessage>
    </validationRules>
</CustomObject>